<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Napzzz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_next">Next</string>
    <string name="facebook_signin">Sign In with Facebook</string>
    <string name="googleplus_signin">Sign In with Google</string>
    <string name="email_signin">Sign In with Email</string>
    <string name="login">Log In</string>
    <string name="title_activity_login_detail">LoginDetailActivity</string>
    <string name="email">Email</string>
    <string name="enter_email">Your Email</string>
    <string name="enter_name">Your Name</string>
    <string name="password">Password</string>
    <string name="enter_password">Your Password</string>
    <string name="enter_confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Your Password ? </string>
    <string name="or">or</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="signup">Sign Up</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="title_activity_host_profile">HostProfileActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hosting">HOSTING</string>
    <string name="napperz">NAPPERZ</string>
    <string name="list_your">YOUR SPACE</string>
    <string name="list_your_space">LIST YOUR SPACE</string>
    <string name="why_host">WHY HOST</string>
    <string name="booking">BOOKING</string>
    <string name="filters">FILTERS</string>
    <string name="details">DETAILS</string>
    <string name="description">Description</string>
    <string name="rules">Rules</string>
    <string name="add_tags">Add Tags</string>
    <string name="no_smoking">No Smoking</string>
    <string name="no_pets">No Pets</string>
    <string name="perks">Perks</string>
    <string name="wireless">Wireless</string>
    <string name="tv">TV</string>
    <string name="air_conditioning">Air Conditioning</string>
    <string name="type_here">Add a brief description...</string>
    <string name="title_activity_list_your_space">ListYourSpaceActivity</string>
    <string name="title_activity_your_space__add_photos">YourSpace_AddPhotos</string>
    <string name="title_activity_your_space__details">YourSpace_Details</string>
    <string name="title_activity_photo_gallery">PhotoGalleryActivity</string>
    <string name="title_activity_your_space__price">YourSpace_Price</string>
    <!--for profile  -->
    <string name="user_profile_name">User Name</string>
    <string name="user_profile_description">User Descriptions.</string>
    <string name="user_profile_show_review">6 Reviews</string>
    <string name="user_varified_icons">Varified User</string>
    <string name="user_birthday_txtview">Birthday</string>
    <string name="user_email_txtview">Email</string>
    <string name="user_phone_txtview">Phone</string>
    <string name="user_language_txtview">Language</string>
    <string name="user_become_host">Become Host</string>
    <string name="user_booking">Booking</string>
    <!--   Become Host -->
    <string name="user_listur_space">List your space</string>
    <string name="user_mange_listing">Manage Listing</string>
    <string name="user_why_host">Why host?</string>
    <!--   Booking -->
    <string name="user_chkin_out">Check in/out</string>
    <string name="user_booking_history">Booking History</string>

    <string name="add_rules">Add rules</string>
    <string name="one_hr">1 hr.</string>
    <string name="three_hr">3 hr.</string>
    <string name="six_hr">6 hr.</string>
    <string name="ten_hr">10 hr.</string>
    <string name="Doller_zero">$00</string>
    <string name="my_address">745 EverGreen Bevella Vista RD</string>
    <string name="Finish">FINISH</string>
    <string name="add_address">Add Adress</string>
    <string name="twnty_five">$25</string>
    <string name="setUp_Price">SETUP PRICE</string>
    <string name="set_price">Set price</string>


    <string name="set_up_location">Setup Location</string>
    <string name="API_KEY">AIzaSyBIMzJ-8v62RjZfP-I0hNgo3QuwrbpglnM</string>

    <string name="text_apply">Apply</string>




    <string name="enterphonenumber">Enter your phone number</string>

    <string name="sending_sms">We\'re sending an sms to</string>
    <string name="flashcalling">We\'re requesting a flash call to</string>
    <string name="inprogress">Verification in\nprogress</string>
    <string name="verified">Verification successful</string>
    <string name="failed">Verification failed</string>



</resources>
