<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background" 
     >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical"
        android:gravity="center_horizontal|bottom" 
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true" 
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
         >
        
      
    <Button 
        android:id="@+id/facebookBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebook_signin" 
        android:layout_margin="5dp" 
        android:background="@drawable/rounded_edittext" 
        android:padding="10dp" 
        android:textColor="@android:color/black"  
        android:drawableLeft="@drawable/ambu"
        
          />
  
     <Button
        android:id="@+id/googleBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/googleplus_signin"
        android:layout_margin="5dp" 
        android:background="@drawable/rounded_edittext" 
        android:padding="10dp" 
        android:textColor="@android:color/black"  
         android:drawableLeft="@drawable/ambu"
         />
     
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"  >
     
     <View
        android:layout_width="80dp"
        android:layout_height="1.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white" 
        android:layout_gravity="center" 
        android:layout_weight="0.5"
        /> 
     
     <TextView
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_gravity="center" 
        android:gravity="center" 
        android:textColor="@android:color/white"  
        android:layout_weight="0.5"
         
         />
      <View
        android:layout_width="80dp"
        android:layout_height="1.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        android:layout_gravity="center"
         android:layout_weight="0.5"  />
      
     </LinearLayout>
     
      <Button
        android:id="@+id/signupBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" 
        android:layout_margin="5dp"
        android:background="@drawable/rounded_edittext" 
        android:padding="10dp" 
        android:visibility="gone"
        android:textColor="@android:color/black"     />
      
      <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_signin" 
        android:layout_margin="5dp"
        android:background="@drawable/rounded_edittext" 
        android:padding="10dp" 
        android:textColor="@android:color/black" 
        android:paddingLeft="20dp"  
        android:paddingRight="20dp" />
      

      </LinearLayout>
      
  
</RelativeLayout>
